//
// Copyright 2015, TeamDev Ltd. All rights reserved.
//
// Redistribution and use in source and/or binary forms, with or without
// modification, must retain the above copyright notice and the following
// disclaimer.
//
// THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
// "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
// LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
// A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
// OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
// SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
// LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
// DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
// THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
// (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
// OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
//
syntax = "proto3";

package lobby.registration.seats;

option java_package="lobby.registration.seats";
option java_outer_classname = "RegistrationOrderEventsProto";
option java_multiple_files = true;

import "lobby/registration/seats/seats.proto";
import "lobby/registration/order/order.proto";
import "lobby/registration/conference.proto";

// The event propagated when the reservation confirmation is received.
message SeatsReserved {
    // The ID of the conference.
    lobby.registration.ConferenceId conference_id = 1;

    // The ID of the reservation.
    lobby.registration.seats.ReservationId reservation_id = 2;

    // The items representing the quantity of reserved seats.
    repeated lobby.registration.seats.SeatQuantity reservation_details = 3;

    // The items representing the quantity of available seats.
    repeated lobby.registration.seats.SeatQuantity available_seats_changed = 4;
}

// The event propagated when the payment for the reservation is received and the reservation is committed.
message SeatsReservationCommitted {
    // The ID of the reservation.
    lobby.registration.seats.ReservationId reservation_id = 1;
}

// The event propagated when the seats reservation is cancelled.
message SeatsReservationCancelled {
    // The ID of the reservation.
    lobby.registration.seats.ReservationId reservation_id = 1;

    // The items representing the quantity of available seats.
    repeated lobby.registration.seats.SeatQuantity available_seats_changed = 2;
}

// The event propagated when the availability of the seats is changed.
message AvailableSeatsChanged  {
    // The ID of the reservation.
    lobby.registration.seats.ReservationId reservation_id = 1;

    // The items representing the quantity of seats of different types.
    repeated lobby.registration.seats.SeatQuantity seat = 2;
}

// The event propagated when a seat is assigned to an attendee.
message SeatAssigned {
    // The ID of the reservation.
    lobby.registration.seats.ReservationId reservation_id = 1;

    // The position of the seat.
    int32 seat_position = 2;

    // The ID of the seat type.
    lobby.registration.SeatTypeId seat_type_id = 3;

    // The personal info of the attendee.
    lobby.registration.seats.PersonalInfo attendee = 4;
}

// The event propagated when a seat assignment is created.
message SeatAssignmentsCreated {
    // The ID of the reservation.
    lobby.registration.seats.ReservationId reservation_id = 1;

    // The ID of the order.
    lobby.registration.order.OrderId order_id = 2;

    // The short seat assignment info objects.
    repeated SeatAssignmentInfo seat = 3;

    // The short seat assignment info object.
    message SeatAssignmentInfo {
        // The position of the seat.
        int32 seat_position = 1;

        // The ID of the seat type.
        lobby.registration.SeatTypeId seat_type_id = 2;
    }
}

// The event propagated when a seat assignment is updated.
message SeatAssignmentUpdated {
    // The ID of the reservation.
    lobby.registration.seats.ReservationId reservation_id = 1;

    // The position of the seat.
    int32 seat_position = 2;

    // The personal info of the attendee.
    lobby.registration.seats.PersonalInfo attendee = 3;
}

// The event propagated when a seat is unassigned from an attendee.
message SeatUnassigned {
    // The ID of the reservation.
    lobby.registration.seats.ReservationId reservation_id = 1;

    // The position of the seat.
    int32 seat_position = 2;
}
